--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/header.ico" type="image/x-icon">
     <title>Разработка продуктов</title>
 </head>
 
@@ -14,20 +15,14 @@
     <nav>
         <a href="#" class="logo">Разработка Продуктов</a>
         <div class="links">
-            <!-- <a href="#">Home</a> -->
-            <!-- <a href="#">Features</a> -->
             <a href="https://t.me/+MSBo739JmsBjZmNi">Блог</a>
             <a href="#about">О нас</a>
         </div>
-        <!-- <div class="login">
-            <button class="signup">Get Started</button>
-            <button>Login</button>
-        </div> -->
     </nav>
 
     <header>
         <div class="left">
-            <h1>Техническое и продуктовое развитие <span>ваших продуктов</span></h1>
+            <h1>Техническое и продуктовое развитие <span>ваших задач</span></h1>
             <p>"Разработка продуктов" - качественное выполнение задач от выходцов крупных IT компаний 
                 с первоклассным исполнением. Мы выполняем полный фронт работ по созданию и поддержке продукта.
             </p>
@@ -46,7 +41,6 @@
     <div class="sell-nft">
         <div class="item">
             <div class="header">
-                <!-- <i class='bx bx-wallet-alt'></i> -->
                 <i class='bx bx-grid-alt'></i>
                 <h5>Полная Web разработка</h5>
             </div>
@@ -56,7 +50,6 @@
         </div>
         <div class="item">
             <div class="header">
-                <!-- <i class='bx bx-cart-alt'></i> -->
                 <i class='bx bx-grid-alt'></i>
                 <h5>Data Science</h5>
             </div>
@@ -81,7 +74,6 @@
             <a>Python</a>
             <a>Kotlin</a>
             <a>JavaScript</a>
-            <a>Saas</a>
         </div>
 
         <div class="nft-list">
@@ -91,15 +83,10 @@
                     <div>
                         <h5>Тералинк</h5>
                         <div class="btc">
-                            <!-- <i class='bx bxl-bitcoin'></i> -->
                             <p>Внутренние продукты</p>
                         </div>
                     </div>
                     <p>1.</p>
-                </div>
-                <div class="bid">
-                    <!-- <p></p>
-                    <a href="https://terralink.ru/">Информация</a> -->
                 </div>
             </div>
             <div class="item">
@@ -108,50 +95,34 @@
                     <div>
                         <h5>TCG World</h5>
                         <div class="btc">
-                            <!-- <i class='bx bxl-bitcoin'></i> -->
-                            <p>Внутренние продукты</p>
                             <p>Мобильная разработка</p>
                         </div>
                     </div>
                     <p>2.</p>
                 </div>
-                <div class="bid">
-                    <!-- <p>1h 28m 1s</p>
-                    <a href="#">Place a Bid</a> -->
-                </div>
             </div>
             <div class="item">
-                <img src="assets/item-3.png">
+                <img src="assets/swiss_lab.png">
                 <div class="info">
                     <div>
-                        <h5>Test</h5>
+                        <h5>SwissLab</h5>
                         <div class="btc">
-                            <!-- <i class='bx bxl-bitcoin'></i> -->
                             <p>Внутренние продукты</p>
                         </div>
                     </div>
                     <p>3.</p>
                 </div>
-                <div class="bid">
-                    <!-- <p>4h 21m 1s</p> -->
-                    <!-- <a href="#">Place a Bid</a> -->
-                </div>
             </div>
             <div class="item">
-                <img src="assets/item-3.png">
+                <img src="assets/codecademy.png">
                 <div class="info">
                     <div>
-                        <h5>Test</h5>
+                        <h5>Codecademy</h5>
                         <div class="btc">
-                            <i class='bx bxl-bitcoin'></i>
                             <p>Внутренние продукты</p>
                         </div>
                     </div>
                     <p>4.</p>
-                </div>
-                <div class="bid">
-                    <!-- <p>0h 28m 1s</p> -->
-                    <!-- <a href="#">Place a Bid</a> -->
                 </div>
             </div>
         </div>
@@ -162,53 +133,14 @@
         <button onclick="window.location.href='https://t.me/devProdManager'">Запросить заказы</button>
     </div>
 
-    <!-- <h2 class="separator">
-        
-    </h2>
-
-    <div class="sellers">
-        <div class="item">
-            <img src="assets/profile-1.png">
-            <div class="info">
-                <h4>Jhone D</h4>
-                <p>15.2K</p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="assets/profile-2.png">
-            <div class="info">
-                <h4>Gregory B</h4>
-                <p>12.7K</p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="assets/profile-3.png">
-            <div class="info">
-                <h4>Stephen E</h4>
-                <p>7.9K</p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="assets/profile-4.png">
-            <div class="info">
-                <h4>Russell M</h4>
-                <p>4.2K</p>
-            </div>
-        </div>
-    </div> -->
-
     <footer>
         <h3>Создание, внедрение передовых технлогий для вашего бизнеса</h3>
         <div class="right">
             <div class="links">
-                <!-- <a href="#">Privacy Policy</a>
-                <a href="#">Cooperation</a>
-                <a href="#">Sponsorship</a> -->
-                <a href="#">Свяжитесь с нами</a>
+                <a href="https://t.me/devProdManager">Свяжитесь с нами</a>
             </div>
             <div class="social">
-                <i class='bx bxl-telegram'></i>
-                <!-- <i class='bx bxl-facebook-square'></i> -->
+                <i onclick="window.location.href='https://t.me/devProdManager'" class='bx bxl-telegram'></i>
                 <i class='bx bxl-github'></i>
             </div>
             <p>Copyright © 2024 DevProg, All Rights Reserved.</p>
