--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="nft-list">
-            <div class="item">
+            <!-- <div class="item">
                 <img src="assets/teralink.png">
                 <div class="info">
                     <div>
@@ -88,7 +88,7 @@
                     </div>
                     <p>1.</p>
                 </div>
-            </div>
+            </div> -->
             <div class="item">
                 <img src="assets/tcg_world.png">
                 <div class="info">
