--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <header>
         <div class="left">
-            <h1>Техническое и продуктовое развитие <span>ваших задач</span></h1>
-            <p>"Разработка продуктов" - качественное выполнение задач от выходцов крупных IT компаний 
+            <h1>Техническое и продуктовое развитие <span>Ваших задач</span></h1>
+            <p>"Разработка продуктов" - качественное выполнение задач от выходцев крупных IT компаний 
                 с первоклассным исполнением. Мы выполняем полный фронт работ по созданию и поддержке продукта.
             </p>
             <a href="https://t.me/devProdManager">
@@ -134,7 +134,7 @@
     </div>
 
     <footer>
-        <h3>Создание, внедрение передовых технлогий для вашего бизнеса</h3>
+        <h3>Создание, внедрение передовых технологий для вашего бизнеса</h3>
         <div class="right">
             <div class="links">
                 <a href="https://t.me/devProdManager">Свяжитесь с нами</a>
