[main] edit jobs

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div class="links">
             <a href="https://t.me/+MSBo739JmsBjZmNi">Блог</a>
             <a href="#about">О нас</a>
+            <a href="#partners">Наши партнёры</a>
+            <a href="#job">Вакансии</a>
         </div>
     </nav>
 
@@ -64,7 +66,7 @@
         </div>
     </div>
 
-    <h2 class="separator">
+    <h2 id="partners" class="separator">
         Наши партнёры
     </h2>
 
@@ -131,6 +133,51 @@
 
     <div class="view-more">
         <button onclick="window.location.href='https://t.me/devProdManager'">Запросить заказы</button>
+    </div>
+
+    <h2 id="job" class="separator">
+        Вакансии
+    </h2>
+
+    <div class="nft-shop">
+        <div class="category">
+            <a>ML</a>
+            <a>Python</a>
+            <a>Продажи</a>
+        </div>
+        <div class="nft-list">
+            <div class="item">
+                <div class="info">
+                    <div>
+                        <h5>Senior ML Developer (Remote)</h5>
+                        <div class="btc">
+                            <p>Внутренние продукты</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="info">
+                    <div>
+                        <h5>Менеджер по продажам</h5>
+                        <div class="btc">
+                            <p>Внутренние продукты</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="info">
+                    <div>
+                        <h5>Senior Python Developer (Remote)</h5>
+                        <div class="btc">
+                            <p>Мобильная разработка</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <footer>
