--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 <i class='bx bx-basket'></i>
                 <span>Оставить заявку</span>
             </a>
+            <a href="assets/DevProduct.pdf">
+                <i class='bx bx-grid-alt'></i>
+                <span>О проекте</span>
+            </a>
         </div>
         <img src="assets/header.png">
     </header>
