[main] add property

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/header.ico" type="image/x-icon">
     <title>Разработка продуктов</title>
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Разработка продуктов" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://devproduct.ru/" />
+    <meta property="og:image" content="https://devproduct.ru/assets/header.png" />
+    <meta property="og:description" content="Техническое и продуктовое развитие ваших задач" />
+    <meta property="og:site_name" content="Your Website Name" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Other Meta Tags -->
+    <meta name="description" content="Техническое и продуктовое развитие ваших задач" />
+    <meta name="keywords" content="разработка сайта, разработка приложений, аутсорс, развитие бизнеса" />
 </head>
 
 <body>
