--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <meta property="og:title" content="Разработка продуктов" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://devproduct.ru/" />
-    <meta property="og:image" content="https://devproduct.ru/assets/header.png" />
+    <meta property="og:image" content="./assets/header.png" />
     <meta property="og:description" content="Техническое и продуктовое развитие ваших задач" />
-    <meta property="og:site_name" content="Your Website Name" />
-    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="DevProduct" />
+    <meta property="og:locale" content="ru_RU" />
 
     <!-- Other Meta Tags -->
     <meta name="description" content="Техническое и продуктовое развитие ваших задач" />
